# NavigatorHMI_FW

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  build-linux-uboot.sh  docker-build.cmd  docker-build.ps1  docker-push.ps1  run-with-log.ps1  test_kimi_api.ps1
.devcontainer/: Dockerfile.ubuntu18  devcontainer.json  dockerfile
.github/: showmethemoney.py
.github/workflows/: build-project.yml  build-push-swr.yml
cmake/: arm-linux-gnueabihf-toolchain.cmake
doc/: BUILD_GUIDE.md  RK_env_guide.md  hardware-notes.md  tmp_write.py  ubuntu18-migration-guide.md
hwt/buildroot/: alientek_emmc_defconfig  post-build.sh
hwt/buildroot/rootfs-overlay/etc/: hostname  hosts  issue  issue.net
hwt/buildroot/rootfs-overlay/opt/qt5.12.9/lib/fonts/: PUT_FONTS_HERE.txt
hwt/linux/arch/arm/boot/dts/: imx6ull-14x14-evk.dts  imx6ull-alientek-emmc.dts
hwt/linux/arch/arm/boot/dts/nxp/imx/: imx6ull-14x14-evk.dts
hwt/linux/arch/arm/configs/: .config  linux_hwt_defconfig
hwt/linux/config/: .config
hwt/qt/mkspecs/linux-arm-gnueabihf-g++/: qmake.conf  qplatformdefs.h
hwt/uboot/board/freescale/mx6ull_alientek_emmc/: mx6ull_alientek_emmc.c
hwt/uboot/config/: .config
hwt/uboot/configs/: .config  uboot_hwt_defconfig
hwt/uboot/include/configs/: mx6ullevk.h
src/: helloworld.cpp  main.cpp
